[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "vulnerability-discovery-pipeline"
version = "1.0.0"
description = "Automated vulnerability discovery: program analysis → AFL++ fuzzing → GitHub Issue generation"
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk>=0.2",
    "anyio>=4.0",
    "docker>=7.0",
    "fastapi>=0.100",
    "uvicorn>=0.20",
]
